#21 Fix fireworks z-index

--- a/Client/Npm/_fireworks.scss
+++ b/Client/Npm/_fireworks.scss
@@ -68,6 +68,7 @@ $box-shadow2: ();
 }
 
 .fireworks-container > .before, .fireworks-container > .after {
+  z-index: 10;
   position: absolute;
   width: 5px;
   height: 5px;
